--- a/index.html
+++ b/index.html
@@ -6,47 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
-    <title>My App</title>
+    <title>VIVA</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" crossorigin="anonymous">
-    <!-- ION Icons -->
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" crossorigin="anonymous">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link src="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
     <!-- Fixed navbar -->
-    <nav id="second" class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">My App</a>
+          <a class="navbar-brand" href="#">Demo</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse pull-right">
+        <div id="navbar" class="collapse navbar-collapse menu-position">
           <ul class="nav navbar-nav">
+            <li><a href="#about">Link</a></li>
+            <li><a href="#about">Link</a></li>
+            <li><a href="#about">Link</a></li>
             <li><a href="#about">Link</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -54,34 +42,32 @@
     </nav>
 
 
-
-
-
     <!-- Begin page content -->
-      <div id="content" class="container">
-        <div class="row">
-          <div class="col-md-12 panel panel-default panel-body">
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div id="content" class="container-fluid">
+
+        <!-- Main Image -->
+        <div class="col-md-12 main-image"></div>
+        
+        <!-- Article -->
+        <div id="article" class="row">
+          <div class="col-md-12 article">
+            <div class="col-md-5 sub-image"></div>
+            <div class="col-md-4 description">
+              <p>Arts</p>
+              <a>If You Missed the Supreme x Nike Release, Here's your Chance for Redemption</a>
+            </div>
           </div>
-        </div> <!-- /row -->
-      </div> <!-- /container -->
 
+          <div class="col-md-12 article">
+            <div class="col-md-5 sub-image"></div>
+            <div class="col-md-4 description">
+              <p>Arts</p>
+              <a>If You Missed the Supreme x Nike Release, Here's your Chance for Redemption</a>
+            </div>
+          </div>
+        </div>
 
-
-
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted">My App © 2016</p>
-      </div>
-    </footer>
-
+    </div> <!-- /container -->
 
 
 
@@ -91,11 +77,5 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    
-    <!-- Custom javascript for this template -->
-    <script src="js/main.js"></script>
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
